--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/harryworld/typeform-slack/issues"
   },
-  "homepage": "https://github.com/harryworld/typeform-slack"
+  "homepage": "https://github.com/harryworld/typeform-slack",
+  "dependencies": {
+    "cubby": "0.0.3",
+    "request": "^2.54.0"
+  }
 }
