--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "typeform-slack",
   "version": "0.0.1",
   "description": "Use typeform for registration, and send invitation email in Slack",
-  "main": "app.js",
+  "private": true,
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,13 @@
   },
   "homepage": "https://github.com/harryworld/typeform-slack",
   "dependencies": {
+    "body-parser": "~1.10.2",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.1",
+    "express": "~4.11.1",
+    "jade": "~1.9.1",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0",
     "cubby": "0.0.3",
     "request": "^2.54.0"
   }
