--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   "dependencies": {
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
+    "cubby": "0.0.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
+    "mongoose": "^4.0.1",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "cubby": "0.0.3",
-    "request": "^2.54.0"
+    "request": "^2.54.0",
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "supertest": "^0.15.0"
