--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/harryworld/typeform-slack",
   "dependencies": {
+    "agenda": "^0.6.28",
     "body-parser": "~1.10.2",
     "cookie-parser": "~1.3.3",
     "cubby": "0.0.3",
